objects/Purchase_Order__c.object
<CustomObject>
    <fields>
        <fullName>Accept_Expedited_Delivery_Charges__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox will indicate that the dealer has agreed to accept additional expedited delivery charges as specified in the dealer price list.</description>
        <label>Accept Expedited Delivery Charges</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Accept_Partial_Shipment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accept Partial Shipment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Accept_Terms__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accept Terms</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Territory__c</fullName>
        <label>Account Territory</label>
        <picklist>
            <picklistValues>
                <fullName>Bavaria Mid-Germany region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North Germany region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other region</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Alternate_Contact_Phone__c</fullName>
        <label>Alternate Contact Phone</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Contact__c</fullName>
        <label>Alternate Contact</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_DSR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned DSR</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Purchase_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_RSM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned RSM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Purchase_Orders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Attention__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Attention</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Purchase Orders</relationshipLabel>
        <relationshipName>Purchase_Orders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bill_To_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bill To Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Purchase Orders (Bill To Contact)</relationshipLabel>
        <relationshipName>Purchase_Orders2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bill_To_SiteID__c</fullName>
        <formula>Bill_to_Site__r.Site_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bill To SiteID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_to_Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bill to Site</label>
        <referenceTo>Bill_To_Site__c</referenceTo>
        <relationshipLabel>Purchase Orders</relationshipLabel>
        <relationshipName>Purchase_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Channel_Type__c</fullName>
        <label>Channel Type</label>
        <picklist>
            <picklistValues>
                <fullName>Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Residential</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Commercial_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This field designates the type of end user and does not affect the order in any way.</inlineHelpText>
        <label>Commercial?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_ID__c</fullName>
        <label>Contact ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSR_PO_Group_Email__c</fullName>
        <label>DSR PO Group Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Dealer_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Purchase Orders</relationshipLabel>
        <relationshipName>Purchase_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dealer_Fees__c</fullName>
        <label>Total Dealer Fees</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Delivery_Charges__c</fullName>
        <label>Delivery Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Effective_Price_of_Goods__c</fullName>
        <label>Effective Price of Goods</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>End_Customer_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>End Customer Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Purchase Orders (End Customer Account)</relationshipLabel>
        <relationshipName>End_Customer_Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ext_Id__c</fullName>
        <externalId>true</externalId>
        <label>Ext Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financier_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to track change in Financier Information</description>
        <label>Financier Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Financier__c</fullName>
        <label>Financier</label>
        <picklist>
            <picklistValues>
                <fullName>Citibank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rabobank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Citi Credit Suisse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ITC1</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>OBS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mosaic</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Forklift__c</fullName>
        <label>Forklift</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GenerateURL__c</fullName>
        <formula>&quot;/apex/LeaseOrderWizard?endCustId=&quot; &amp; Opportunity__r.Account.Id &amp; &quot;&amp;qsInt=Y&amp;qsIntPO=&quot; &amp;  Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GenerateURL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Installer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Project: GPP
Description: Installer Partner for Quote</description>
        <label>Installer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Purchase Orders (Account)</relationshipLabel>
        <relationshipName>Purchase_Orders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Integration_Status__c</fullName>
        <label>Integration Status</label>
        <picklist>
            <picklistValues>
                <fullName>Created</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>InterfaceMessage__c</fullName>
        <description>This field is used to track the history on the Order status interface message field. This field is updated via a workflow rule in order to assist in troubleshooting SOA/Oracle issues.</description>
        <label>Interface Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interface_Status__c</fullName>
        <label>Interface Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Updated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted to SOA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted to Oracle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Inverter_Manufacturer__c</fullName>
        <label>Inverter Manufacturer</label>
        <picklist>
            <picklistValues>
                <fullName>SMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Powerone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fronius</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_Taxible_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allow dealer to select a checkbox on the order to indicate how they want to be the order to be taxed. The default is to &quot;charge tax&quot;.</description>
        <inlineHelpText>If un-checked, please fax a copy of tax exemption certificate.</inlineHelpText>
        <label>Taxable?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <formula>CASE( text( Dealer_Account__r.Country_Domain__c ) ,&apos;rvar-it&apos;, &apos;it&apos;, &apos;cvar-it&apos;, &apos;it&apos; , &apos;combo-it&apos; , &apos;it&apos; , &apos;rvar-de&apos;, &apos;de&apos;, &apos;cvar-de&apos;, &apos;de&apos; , &apos;combo-de&apos; , &apos;de&apos; , &apos;rvar-fr&apos;, &apos;fr&apos;, &apos;cvar-fr&apos;, &apos;fr&apos; , &apos;combo-fr&apos; , &apos;fr&apos; , &apos;rvar-es&apos;, &apos;es&apos;, &apos;cvar-es&apos;, &apos;es&apos; , &apos;combo-es&apos; , &apos;es&apos; ,&apos;en_US&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Language</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lease_Number_Dup__c</fullName>
        <label>Lease Number (Dup)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lease_Number__c</fullName>
        <label>Contract Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lease__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lease</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Liftgate__c</fullName>
        <label>Liftgate</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Material_Cost_Reimbursement__c</fullName>
        <label>Material Cost Reimbursement</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Module_Quantity__c</fullName>
        <description>Cash Orders Redesign - Field to store the number of ordered modules</description>
        <label>Module Quantity</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Module_Type__c</fullName>
        <description>Cash Orders Redesign - field to store the selected module of an order</description>
        <label>Module Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monitoring_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Cash Orders/Order Management: field added to identify if an order is full monitoring opt-out, combined with the removal of user entered monitoring quantiy. Pivotal Tracker Ref No #114753873</description>
        <label>Monitoring Opt-Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Monitoring_Quantity__c</fullName>
        <description>Cash Orders Redesign - field to store number of monitoring systems ordered</description>
        <label>Monitoring Quantity</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <inlineHelpText>Please add any addition notes required for SunPower.  Such as any special tax charges or considerations.</inlineHelpText>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Systems__c</fullName>
        <description>Cash Orders Redesign - field to store the number of systems being ordered.</description>
        <label>Number of Systems</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OK_To_Ship__c</fullName>
        <description>Ok To Ship</description>
        <label>OK To Ship</label>
        <picklist>
            <picklistValues>
                <fullName>HOLD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SKIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RELEASE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>On_Site_Contact_Phone__c</fullName>
        <label>On-Site Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Purchase Orders</relationshipLabel>
        <relationshipName>Purchase_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OracleOrderHeaderId__c</fullName>
        <description>This is the unique sales order Id (row Id) in Oracle</description>
        <label>Oracle Order Header Id</label>
        <length>38</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oracle_Operating_Unit__c</fullName>
        <label>Oracle Operating Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oracle_Order_Number__c</fullName>
        <label>Oracle Order Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oracle_Order_Status__c</fullName>
        <label>Oracle Order Status</label>
        <picklist>
            <picklistValues>
                <fullName>Entered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Booked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Oracle_Order_Type__c</fullName>
        <label>Oracle Order Type</label>
        <picklist>
            <picklistValues>
                <fullName>SPEB RVAR Lease 2</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Oracle_Ship_to_Site_ID__c</fullName>
        <description>Ship to Site ID from Oracle</description>
        <label>Oracle Ship to Site ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oracle_Vendor_Number__c</fullName>
        <label>Oracle Vendor Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oracle_Vendor_Site_Code__c</fullName>
        <label>Oracle Vendor Site Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Booked_Date__c</fullName>
        <description>Date-time when the order was booked in Oracle</description>
        <label>Order Booked Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Order_Status_Interface_Message__c</fullName>
        <label>Order staus interface message</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Order_Status__c</fullName>
        <label>Order Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Processed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hidden</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deleted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent to Oracle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Order_Submit_Date__c</fullName>
        <description>Date-time when the order was successfully submitted to Oracle (Entered state)</description>
        <label>Order Submit Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Order_Total__c</fullName>
        <label>Order Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Order_Type__c</fullName>
        <label>Order Type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Wizard_Step__c</fullName>
        <label>Order Wizard Step</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Step 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Step 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Step 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Step 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Step 5</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Organization_ID__c</fullName>
        <label>Organization ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Submit_Date_Text__c</fullName>
        <label>PO Submit Date Text</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Submit_Date__c</fullName>
        <description>Date when the PO was Submitted.  &quot;Submit to SunPower&quot; button.</description>
        <label>PO Submit Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PO_Submit_SP_WW__c</fullName>
        <label>PO Submit SP WW</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pallet_Jack__c</fullName>
        <label>Pallet Jack</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Partner_Contact_Alternate_Phone__c</fullName>
        <label>Partner Contact Alternate Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Payment_Type__c</fullName>
        <label>Payment Type</label>
        <picklist>
            <picklistValues>
                <fullName>Cash</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_PSR_Email__c</fullName>
        <formula>Dealer_Account__r.Primary_PSR__r.Email</formula>
        <label>Primary PSR Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Projected_Install__c</fullName>
        <label>Projected Install Complete Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PurchaseOrderLink__c</fullName>
        <formula>HYPERLINK(&apos;/&apos;+Id, Name , &apos;_blank&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Purchase Order Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchase_Order_Details__c</fullName>
        <formula>HYPERLINK(GenerateURL__c, &quot;Goto Purchase Order&quot;, &quot;_blank&quot; )</formula>
        <label>Purchase Order Details</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Purchase Orders</relationshipLabel>
        <relationshipName>Purchase_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Racking_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Cash Orders Redesign - field to store whether a partner is opting out of the predefined amount of racking for a system order</description>
        <label>Racking Opt-Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Racking_Quantity__c</fullName>
        <description>Cash Orders Redesign - field to store the calculated quantity of racking based on the racking type selection in the configuration</description>
        <label>Racking Quantity</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Racking_Type__c</fullName>
        <description>Cash Orders Redesign - field to capture the type of racking selected within the order configuration</description>
        <label>Racking Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested_Delivery_Date__c</fullName>
        <label>Requested Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sales_Type__c</fullName>
        <label>Sales Type</label>
        <picklist>
            <picklistValues>
                <fullName>Third Party Owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NH Lease</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ship_To_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shipping Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Purchase Orders (Ship To Contact)</relationshipLabel>
        <relationshipName>Purchase_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ship_To_SiteID__c</fullName>
        <formula>Ship_to_Site__r.SiteID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ship To SiteID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_to_Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ship to Site</label>
        <referenceTo>Ship_to_Site__c</referenceTo>
        <relationshipLabel>Purchase Orders</relationshipLabel>
        <relationshipName>Purchase_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shipping_Method_France__c</fullName>
        <label>Shipping Method</label>
        <picklist>
            <picklistValues>
                <fullName>MGF Truck LTL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MGF Truck FTL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MGF Truck Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>--None--</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Shipping_Method__c</fullName>
        <inlineHelpText>McCollister-Truck-DTH Liftgate-Direct To Home,Liftgate Required
McCollister-Truck-DTH SunPack-Direct to Home,in SunPack
McCollister-Truck-DTW-Direct to Warehouse
Other option-other delivery methods not listed
Transport Via Truck-Long Haul Delivery</inlineHelpText>
        <label>Shipping Method</label>
        <picklist>
            <picklistValues>
                <fullName>McCollister-Truck-DTH LiftGate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>McCollister-Truck-DTW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>McCollister-Truck-FTL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>McCollister-Truck-LTL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Schenker-Air-Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Schenker-Ocean-FCL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Schenker-Ocean-LCL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Van Brunt-Truck-FTL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Van Brunt-Truck-LTL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lift Gate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SunPack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>000001_McColliste_T_DTHL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>--None--</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LSE – Truck LTL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>POD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SmartMount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SmartMount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SmartPack_Flag__c</fullName>
        <description>This fields checks if there is a SmartPack Design associated with the Purchase Order.</description>
        <formula>IF( SunPower_Design__c = &apos;&apos;, &apos;No&apos;,IF( ISPICKVAL(SunPower_Design__r.System_Source__c , &apos;SmartPack-NoRacking&apos;),&apos;No&apos;,&apos;Yes&apos;))</formula>
        <label>SmartPack Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SmartPack_Inverter_Type__c</fullName>
        <formula>IF( 
NOT( 
ISPICKVAL(Inverter_Manufacturer__c, &apos;&apos;) 
), 
( 
IF( 
ISPICKVAL(Inverter_Manufacturer__c, &apos;SunPower&apos;), 
&apos;SMA&apos;, 
TEXT(Inverter_Manufacturer__c) 
) 
), 
( 
IF( 
ISPICKVAL(SunPower_Design__r.System_Source__c , &apos;SmartPack-NoRacking&apos;), 
&apos;&apos;, 
TEXT(SunPower_Design__r.EU_Inverter_Type__c) 
) 
) 
)</formula>
        <label>SmartPack Inverter Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SmartPack_Mounting_Type__c</fullName>
        <formula>IF((TEXT(SunPower_Design__r.EU_Mounting_Type__c))= &apos;InvisiMount&apos;, &quot;SPR-SM&quot;, (TEXT(SunPower_Design__r.EU_Mounting_Type__c)))</formula>
        <label>SmartPack Mounting Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Instructions__c</fullName>
        <inlineHelpText>Please enter any special shipping instructions that might be helpful for the shipper</inlineHelpText>
        <label>Special Instructions</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Storage_Quantity__c</fullName>
        <description>Order Management: Field to store and restrict the available quantities of selected storage units within the smartpack ordering system
Release WW28 - 2016</description>
        <label>Storage Quantity</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Storage__c</fullName>
        <description>Order Management: Field to store a selected storage item
Release WW28 - 2016</description>
        <label>Storage Option</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SunPower_Design__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SunPower Design</label>
        <referenceTo>SunPower_Design__c</referenceTo>
        <relationshipLabel>Purchase Orders</relationshipLabel>
        <relationshipName>Purchase_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>System_Fees__c</fullName>
        <label>Total System Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>System_Size__c</fullName>
        <label>System Size (kW)</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TPO_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TPO Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Purchase Orders (TPO Account)</relationshipLabel>
        <relationshipName>TPO_Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tax_Identifier__c</fullName>
        <formula>IF( 

AND((End_Customer_Account__r.BillingState = &quot;CA&quot; || End_Customer_Account__r.BillingState = &quot;NV&quot;), Quote__r.Date_Modified__c &gt; DATE(2013,12,17)), 

&quot;UPCE&quot;,NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tax Identifier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Temp_Cancelled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Temporary field used for Order Integration Analysis 
This field will be set to TRUE and Order Status = Cancelled for any unprocessed order (Type &quot;Cash&quot; in Status &quot;Submitted&quot; or &quot;Error&quot;) older than 01st Jan 2013
By Eric&apos;s Approval: 01st May 2013</description>
        <inlineHelpText>Temporary field used for Order Integration Analysis</inlineHelpText>
        <label>Temp Cancelled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Lease_Value__c</fullName>
        <label>Total Lease Value</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>